--- a/index.html
+++ b/index.html
@@ -1,44 +1,13 @@
 <script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-
         // Function to load bookmarklets from manually specified JS files
         async function loadBookmarklets() {
-            const repoOwner = 'USERNAME'; // Replace with your GitHub username
-            const repoName = 'REPO'; // Replace with your repository name
+            const repoOwner = 'hfbrito'; // Replace with your GitHub username
+            const repoName = 'd365bookmarklets'; // Replace with your repository name
             const branch = 'main'; // Replace with your branch if not 'main' (e.g., 'gh-pages')
             // Manually specify the JavaScript files to include
             const jsFiles = [
-                'scripts/bookmarklet1.js',
-                'scripts/bookmarklet2.js'
+                'scripts/Get GUID.js',
+                'scripts/Enable CommandChecker.js'
                 // Add more file paths here, e.g., 'scripts/bookmarklet3.js'
             ];
             const container = document.querySelector('.container');
