--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
                     <a href="#">Enable CommandChecker</a>
                     <p>Ativa o CommandChecker para depuração.</p>
                 </div>
+		    <div class="bookmarklet" data-bookmarklet="Enable CommandChecker">
+                    <h2>Enable CommandChecker</h2>
+                    <a href="#">Enable CommandChecker</a>
+                    <p>Ativa o CommandChecker para depuração.</p>
+                </div>
 				
             </div>
         </section>
