--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookmarklets Compartilhados</title>
+    <title>D365 - Bookmarklets</title>
     <style>
         body {
             font-family: Arial, sans-serif;
