--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
                     <a href="#">Listar Entidades</a>
                 </div>
 
-                <div class="bookmarklet" data-bookmarklet="Open record in selected App v.2">
-                    <h2>Open record in selected App v.2</h2>
+                <div class="bookmarklet" data-bookmarklet="Open Record in Selected App v.2">
+                    <h2>Open Record in Selected App v.2</h2>
                     <p>Abre registro atual no app selecionado.</p>
-                    <a href="#">Open record in selected App v.2</a>
+                    <a href="#">Open Record in Selected App v.2</a>
                 </div>
 
                 <div class="bookmarklet" data-bookmarklet="Open Record Entity list">
@@ -281,10 +281,10 @@
                     <a href="#">Get Entity Plural Name</a>
                 </div>
 
-                <div class="bookmarklet" data-bookmarklet="Open record in selected App v.1">
-                    <h2>Open record in selected App v.1</h2>
+                <div class="bookmarklet" data-bookmarklet="Open Record in Selected App v.1">
+                    <h2>Open Record in Selected App v.1</h2>
                     <p>Abre registro atual no app selecionado.</p>
-                    <a href="#">Open record in selected App v.1</a>
+                    <a href="#">Open Record in Selected App v.1</a>
                 </div>
 
             </div>
@@ -308,9 +308,9 @@
                 'scripts/Get Entity Name.js',
                 'scripts/Get Entity Plural Name.js',
                 'scripts/Query Entity Label by Logical Name.js',
-                'scripts/Open record in selected App v.1.js',
+                'scripts/Open Record in Selected App v.1.js',
                 'scripts/Explorador de Assuntos.js',
-                'scripts/Open record in selected App v.2.js',
+                'scripts/Open Record in Selected App v.2.js',
                 'scripts/Listar Entidades.js',
                 'scripts/Open Record Entity list.js',
                 'scripts/Get Entity Infos.js',
