--- a/index.html
+++ b/index.html
@@ -302,21 +302,21 @@
             const repoName = 'd365bookmarklets';
             const branch = 'main';
             const jsFiles = [
-                'scripts/Get GUID.js',
-                'scripts/Enable CommandChecker.js',
-                'scripts/Form - Show Lookup Guid on Label.js',
-                'scripts/Get Entity Name.js',
-                'scripts/Get Entity Plural Name.js',
-                'scripts/Query Entity Label by Logical Name.js',
-                'scripts/Open Record in Selected App v.1.js',
-                'scripts/Explorador de Assuntos.js',
-                'scripts/Open Record in Selected App v.2.js',
-                'scripts/Listar Entidades.js',
-                'scripts/Open Record Entity list.js',
-                'scripts/Get Entity Infos.js',
-                'scripts/Get Form name.js',
-                'scripts/Update - Setar registro Ativo.js',
-                'scripts/JSON Pretty Print.js'
+                'scripts/Get GUID.js'
+                ,'scripts/Enable CommandChecker.js'
+                ,'scripts/Form - Show Lookup Guid on Label.js'
+                ,'scripts/Get Entity Name.js'
+                ,'scripts/Get Entity Plural Name.js'
+                ,'scripts/Query Entity Label by Logical Name.js'
+                ,'scripts/Open Record in Selected App v.1.js'
+                ,'scripts/Explorador de Assuntos.js'
+                ,'scripts/Open Record in Selected App v.2.js'
+                ,'scripts/Listar Entidades.js'
+                ,'scripts/Open Record Entity list.js'
+                ,'scripts/Get Entity Infos.js'
+                ,'scripts/Get Form name.js'
+                ,'scripts/Update - Setar registro Ativo.js'
+                ,'scripts/JSON Pretty Print.js'
                 // Add more file paths here, e.g., 'scripts/NewBookmarklet.js'
             ];
 
