--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
             <h2>Diversos</h2>
             <div class="bookmarklet-container">
 
+				<div class="bookmarklet" data-bookmarklet="Pesquisar Actions e Custom APIs">
+                    <h2>Pesquisar Actions e Custom APIs</h2>
+                    <p>Popup de Pesquisa de Actions e Custom APIs pelo nome.</p>
+                    <a href="#">Pesquisar Actions e Custom APIs</a>
+                </div>
+				
                 <div class="bookmarklet" data-bookmarklet="Enable CommandChecker">
                     <h2>Enable CommandChecker</h2>
                     <p>Ativa o CommandChecker para depuração.</p>
@@ -317,6 +323,7 @@
                 ,'scripts/Get Form name.js'
                 ,'scripts/Update - Setar registro Ativo.js'
                 ,'scripts/JSON Pretty Print.js'
+                ,'scripts/Pesquisar Actions e Custom APIs.js'
                 // Add more file paths here, e.g., 'scripts/NewBookmarklet.js'
             ];
 
